--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "lucide-react": "^0.294.0",
     "mongoose": "^8.15.1",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.7",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
