--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "seed": "node scripts/seedDatabase.js",
+    "seed:auth": "node scripts/seedAuthData.js",
     "reset": "node scripts/resetDatabase.js"
   },
   "dependencies": {
@@ -44,6 +45,7 @@
     "@types/react-toastify": "^4.0.2",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -62,6 +64,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "mongoose": "^8.15.1",
+    "mongoose-sequence": "^6.0.1",
     "next-themes": "^0.2.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.1",
