--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ VITE_BACKEND_URL=http://localhost:3002
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGO_URI=mongodb://localhost:27017/laptop-store
+MONGODB_URI=mongodb://127.0.0.1:27017/laptop-store
 
 # Enable debug logging
 DEBUG=true
