--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "reset": "node scripts/resetDatabase.js"
   },
   "dependencies": {
+    "@emailjs/nodejs": "^5.0.2",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -41,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-table": "^8.10.7",
     "@types/react-toastify": "^4.0.2",
     "@vitejs/plugin-react-swc": "^3.10.2",
@@ -54,7 +56,8 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.0.0-rc22",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -83,6 +86,7 @@
     "twilio": "^4.19.0",
     "uuid": "^11.1.0",
     "vaul": "^0.7.9",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
