--- a/package.json
+++ b/package.json
@@ -76,9 +76,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.5.0",
+    "react-qr-barcode-scanner": "^2.1.8",
     "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^11.0.5",
+    "react-zxing": "^2.1.0",
     "recharts": "^3.0.2",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.0.0",
