--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "uuid": "^11.1.0",
     "vaul": "^0.7.9",
     "xlsx": "^0.18.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "idb": "^7.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
