--- a/.gitignore
+++ b/.gitignore
@@ -1,99 +1,35 @@
 # Dependencies
 node_modules/
+
+# Build outputs
+/dist
+/build
+/.next
+/out
+
+# Environment files (keep .env.example as a template)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Production builds
-dist/
-build/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.development
-.env.example
-.env.test.local
-.env.production.local
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output/
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Logs
-logs
-*.log
-
 # Editor directories and files
-.vscode/
-.idea/
+.idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-<<<<<<< HEAD
-
-# OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -102,19 +38,54 @@ logs
 ehthumbs.db
 Thumbs.db
 
-# Database
-*.sqlite
-*.db
+# Cache
+.cache
+.parcel-cache
+.eslintcache
 
-# Uploads
-uploads/
-public/uploads/
+# Testing
+/coverage
+.nyc_output
+*.test.*
+*.spec.*
+/__tests__
+/test
+/__mocks__
+/cypress
+/jest.config.*
+/vitest.config.*
+/playwright-report/
+/playwright/.cache/
+/playwright/test-results/
 
-# TypeScript
-*.tsbuildinfo
+# Package manager specific
+.pnp
+.pnp.js
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
-# Vite
-.vite/
-=======
-.env
->>>>>>> 3f91f537b68aab5f7cccf4cf308395bfd7c10212
+# Next.js
+.next/
+out/
+
+# Misc
+.temp
+.tmp
+.vercel
+.netlify
+
+# Windows specific
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
