--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "reset": "node backend/scripts/resetDatabase.js",
     "start": "node backend/server.js"
   },
-  
   "dependencies": {
-    
     "@emailjs/browser": "^4.4.1",
+    "react-is": "^18.2.0",
     "@emailjs/nodejs": "^5.0.2",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -81,6 +80,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.1",
     "react-qr-barcode-scanner": "^2.1.8",
     "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^6.20.1",
@@ -110,5 +110,3 @@
     "vite": "^4.5.0"
   }
 }
-
-
