--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "server": "nodemon backend/server.js",
     "client": "vite",
     "build": "vite build",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview",
     "seed": "node backend/scripts/seedDatabase.js",
     "seed:auth": "node backend/scripts/seedAuthData.js",
