--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
   ],
   "routes": [
     {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    },
+    {
       "src": "/sw.js",
       "dest": "/sw.js",
       "headers": {
