--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,23 @@
       }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/sw.js",
-      "destination": "/sw.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Authorization"
+      }
     },
     {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
+      "src": "/sw.js",
+      "dest": "/sw.js"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
     },
     {
       "source": "/(.*)",
