--- a/vercel.json
+++ b/vercel.json
@@ -28,8 +28,8 @@
       "dest": "/assets/$1"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "headers": [
